Bug 13992 - assertion failure on bad stap -d /paths
Summary: assertion failure on bad stap -d /paths
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: translator (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-19 00:35 UTC by Frank Ch. Eigler
Modified: 2012-05-02 19:48 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Ch. Eigler 2012-04-19 00:35:41 UTC
./stap -p4 -d /foo/bar --ldd -e 'probe begin {}'
WARNING: side-effect-free probe 'probe_4502': keyword at <input>:1:1
 source: probe begin {}
         ^
stap: ../systemtap2/dwflpp.cxx:1157: void dwflpp::iterate_over_libraries(void (*)(void*, const char*), void*): Assertion `this->module_name.length() != 0' failed.
[1]    23400 abort (core dumped)  ./stap -p4 -d /foo/bar --ldd -e 'probe begin {}'
Comment 1 Frank Ch. Eigler 2012-04-19 01:50:55 UTC
commit 0ce08aa
Comment 2 Mark Wielaard 2012-05-02 19:48:09 UTC
Refixed in commit gfb6cf58