PR13992: let stap tolerate -d /foo/bad/path --ldd argument

* translate.cxx (add_unwindsym_ldd): Skip unresolvable path that
  results in skeleton dwflpp.  We'll get a warning later.
* testsuite/transok/eleven.stp: New test case.