translate.cxx
@@ -6200,8 +6200,12 @@ add_unwindsym_ldd (systemtap_session &s)
       if (! is_user_module (modname)) continue;
 
       struct dwflpp *mod_dwflpp = new dwflpp(s, modname, false);
-      mod_dwflpp->iterate_over_modules(&query_module, mod_dwflpp);
-      mod_dwflpp->iterate_over_libraries (&add_unwindsym_iol_callback, &added);
+      if (mod_dwflpp->module) // existing binary
+        {
+          assert (mod_dwflpp->module_name != "");
+          mod_dwflpp->iterate_over_modules (&query_module, mod_dwflpp);
+          mod_dwflpp->iterate_over_libraries (&add_unwindsym_iol_callback, &added);
+        }
       delete mod_dwflpp;
     }
 
